--- a/web/src/index.html
+++ b/web/src/index.html
@@ -18,16 +18,16 @@
   
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
 -->
- <!-- pour appliquer le theme de PrimeMG Ecuador
+ <!-- pour appliquer le theme de PrimeMG Ecuador  -->
   <link id="theme-css" rel="stylesheet" type="text/css" href="assets/theme/indigo/theme-light.css">
   <link id="layout-css" rel="stylesheet" type="text/css" href="assets/layout/css/layout-indigo.css">
- -->
 
-<!-- Pour appliquer le thme de base de primeMG -->
+
+<!-- Pour appliquer le thme de base de primeMG 
   <link rel="stylesheet" type="text/css" href="/node_modules/primeicons/primeicons.css" />
   <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/themes/omega/theme.css" />
   <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css" />
-
+-->
 </head>
 <body>
   <app-root></app-root>
